--- a/bitset/WebContent/WEB-INF/web.xml
+++ b/bitset/WebContent/WEB-INF/web.xml
@@ -2,6 +2,7 @@
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
 	"http://java.sun.com/dtd/web-app_2_3.dtd">
 <web-app>
+	<display-name>BitSet Demo</display-name>
 	<!--listener>
 		<listener-class>com.sun.xml.ws.transport.http.servlet.WSServletContextListener
 			</listener-class>
